--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+Release 1.12.1+dd.1 (2023-01-04)
+===========================
+
+* Mark machine hash as not used for security.
+
 Release 1.12.1 (2023-01-04)
 ===========================
 
